# opensearch_embed_comparison

./: .gitignore  Makefile  main.py  pyproject.toml
config/: datasets.yaml  models.yaml
config/opensearch/: app.yaml  infra.yaml
docs/: spec.md
infra/: docker-compose.yml
infra/opensearch/pipelines/: ingest.mustache  search.mustache
infra/opensearch/scripts/: cli.py
infra/opensearch/templates/: index.mustache
