[project]
name = "opensearch-embed-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "datasets<4.0.0",
    "opensearch-py>=2.5",
    "opensearch-py-ml>=1.3.0",
    "pydantic>=2.6",
    "pystache>=0.6",
    "pyyaml>=6.0.3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pyrefly>=0.35",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyrefly]
python-version = "3.12"

[dependency-groups]
dev = [
    "marimo>=0.18.4",
]
